tests/ui/g-typelist-local-payload-mismatch.stderr
error[E0308]: mismatched types
 --> tests/ui/g-typelist-local-payload-mismatch.rs:9:5
  |
9 | > = PROGRAM;
  |     ^^^^^^^ expected `LocalSend<Role<1>, Message<..., u8>>`, found `SendStep<Role<0>, Role<1>, ...>`
  |
  = note: expected struct `Program<StepCons<LocalSend<Role<1>, hibana::global::Message<hibana::global::LabelMarker<7>, u8>>, StepNil>>`
             found struct `Program<StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<7>, u16>>, StepNil>>`

error[E0277]: the trait bound `StepCons<LocalSend<Role<1>, hibana::global::Message<hibana::global::LabelMarker<7>, u8>>, StepNil>: ProjectRole<Role<_>>` is not satisfied
  --> tests/ui/g-typelist-local-payload-mismatch.rs:12:13
   |
12 |     project(&PROGRAM_TOKEN);
   |     ------- ^^^^^^^^^^^^^^ unsatisfied trait bound
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `ProjectRole<Role<_>>` is not implemented for `StepCons<LocalSend<Role<1>, hibana::global::Message<hibana::global::LabelMarker<7>, u8>>, StepNil>`
           but it is implemented for `StepCons<SendStep<_, _, _, _>, _>`
   = help: for that trait implementation, expected `SendStep<_, _, _, _>`, found `LocalSend<Role<1>, hibana::global::Message<hibana::global::LabelMarker<7>, u8>>`
note: required by a bound in `project`
  --> src/global/role_program.rs
   |
   | pub const fn project<'prog, const ROLE: u8, Steps, Mint>(
   |              ------- required by a bound in this function
...
   |     Steps: BuildProgramSource + ProjectRole<Role<ROLE>>,
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `project`
